--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "platform": "virtualbox",
-    "box_name": "playa_mesos_ubuntu_14.04_201601041324",
-    "base_url": "http://downloads.mesosphere.io/playa-mesos",
+    "box_name": "playa_mesos_ubuntu_14.04_201609071540",
+    "base_url": "http://downloads.mesosphere.io/stigsb",
     "ip_address": "10.141.141.10",
     "vm_ram": "2048",
     "vm_cpus": "2"
